[project]
name = "UC2"
version = "0.1.0"
description = "Unidad Competencial 2 de la asignatura 63GIIN - Aprendizaje Automático de la carrera de Ingenieria Informatica de la Universidad Internacional de Valencia (VIU)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "notebook>=7.3.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]
